[package]
name = "d2r"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = { version = "0.34.2", default-features = false, features = ["system"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", default-features = false, features = ["macros", "rt", "sync"] }
tracing = "0.1.41"
wmi = "0.17.2"

[dev-dependencies]
anyhow = "1.0.98"
tokio = { version = "1.45.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["local-time"] }
